--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,3 +13,12 @@
 a {
   color: white !important;
 }
+
+.iconContainer {
+  width: 60%;
+  height: 50px;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
