--- a/src/components/NewsContent/NewsContent.css
+++ b/src/components/NewsContent/NewsContent.css
@@ -25,6 +25,9 @@
     display: none;
   }
 }
+
+/* --------------------------------------------------- */
+
 .loadMore {
   cursor: pointer;
   background-color: white;
